# Desktop_app

./: .gitignore  README.md  demo_data.py  pyproject.toml  requirements.txt  run_desktop.py  snippets.db  test.md  test_all_components.py  test_app.py  test_snippets.db  test_ui.py
codesnippet_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
snippet_app/: README.md  main.py  run_app.py  test_db.py
src/: database.py  dialogs.py  main.py  snippet_card.py  snippets.db  test_db.py  test_snippets.db
src/models/: database.py  snippets.db  test_snippets.db
src/ui/: __init__.py  code_editor.py  components.py  dialogs.py  main_editor_view.py  main_view.py  snippet_card.py  study_view.py
src/utils/: ai_helper.py  constants.py  export_import.py
